welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:15: error: illegal start of simple expression
  if (maxi2== -2) [
                  ^